--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://Princekashish.github.io/Pinak_Idea_Lab",
   "dependencies": {
     "framer-motion": "^11.11.9",
+    "gh-pages": "^6.2.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
